add styling for left div with background image, logo, and custom text for header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
     <div class="left">
-        <div class="left_logo"></div>
+        <div class="left_logo">
+            <img src="images/odin-lined.png" alt="odin logo">
+            <h1>ODIN</h1>
+        </div>
         <p>Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a>
             on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         </p>
