Add left_intro section content and styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     </div>
 
     <div class="right">
-        <div class="right_intro"></div>
+        <div class="right_intro">
+            <h3>This is an awesomely unreal online service! You know you need this, sign up now to get started!</h3>
+            <h3>You <i>know</i> you want to.</h3>
+        </div>
         <form class="right_form"></form>
         <div class="right_account"></div>
     </div>
