Add style to inputs

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             <div class="right_form-row">
                 <div class="right_form-column">
                     <label for="user-password">Password</label>
-                    <input type="password" id="user-password" name="userPassword">
+                    <input type="password" id="user-password" name="userPassword" required minlength="8" maxlength="15">
                 </div>
 
                 <div class="right_form-column">
                     <label for="confirm-password">Confirm Password</label>
-                    <input type="password" id="confirm-password" name="confirmPassword">
+                    <input type="password" id="confirm-password" name="confirmPassword" required minlength="8" maxlength="15">
                 </div>
             </div>
             
